Allow variable/multiple heading modifiers

--- a/templates/list-extra-light.html
+++ b/templates/list-extra-light.html
@@ -1,4 +1,4 @@
-{{>n-teaser-collection/templates/partials/heading fullWidth=true}}
+{{>n-teaser-collection/templates/partials/heading headingModifiers='full-width'}}
 <ol class="o-teaser-collection__items">
 	{{#slice items offset=0 limit=5}}
 	<li class="o-teaser-collection__item">
