--- a/templates/partials/heading.html
+++ b/templates/partials/heading.html
@@ -2,7 +2,7 @@
 	{{#if hideTitle}}
 		<h2 class="n-util-visually-hidden">{{title}}</h2>
 	{{else}}
-		<h2 class="o-teaser-collection__heading{{#if fullWidth}} o-teaser-collection__heading--full-width{{/if}}">
+		<h2 class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
 			{{#if url}}
 				<a href="{{url}}" data-trackable="section-title">{{title}}</a>
 			{{else}}
