Show stream dates for small screens
@adgad

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -10,7 +10,7 @@ TODO: Tidy this mess up
 <ul class="o-teaser-collection__list">
 	{{#each items}}
 		<li class="o-teaser-collection__item o-grid-row">
-			<div data-o-grid-colspan="hide L3">
+			<div data-o-grid-colspan="12 L3">
 				{{#unlessEquals template 'advert'}}
 				{{#unlessEquals template 'tour-tip'}}
 					<div class="stream-card__date">
