--- a/templates/partials/heading.html
+++ b/templates/partials/heading.html
@@ -1,13 +1,13 @@
 {{#if title}}
 	{{#if hideTitle}}
-		<h2 class="n-util-visually-hidden">{{title}}</h2>
+		<h3 id="suggested-reads__title" class="n-util-visually-hidden">{{title}}</h3>
 	{{else}}
-		<h2 class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
+		<h3 id="suggested-reads__title" class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
 			{{#if url}}
 				<a href="{{url}}" data-trackable="section-title">{{title}}</a>
 			{{else}}
 				{{title}}
 			{{/if}}
-		</h2>
+		</h3>
 	{{/if}}
 {{/if}}
