--- a/templates/partials/heading.html
+++ b/templates/partials/heading.html
@@ -2,12 +2,12 @@
 	{{#if hideTitle}}
 		<div class="n-util-visually-hidden">{{title}}</div>
 	{{else}}
-		<div class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
+		<{{#if headingTag}}{{headingTag}}{{else}}div{{/if}} class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
 			{{#if url}}
 				<a href="{{url}}" data-trackable="section-title">{{title}}</a>
 			{{else}}
 				{{title}}
 			{{/if}}
-		</div>
+		</{{#if headingTag}}{{headingTag}}{{else}}div{{/if}}>
 	{{/if}}
 {{/if}}
