--- a/templates/partials/heading.html
+++ b/templates/partials/heading.html
@@ -2,7 +2,7 @@
 	{{#if hideTitle}}
 		<div class="n-util-visually-hidden">{{title}}</div>
 	{{else}}
-		<{{#if headingTag}}{{headingTag}}{{else}}div{{/if}} class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}">
+		<{{#if headingTag}}{{headingTag}}{{else}}div{{/if}} class="o-teaser-collection__heading{{#headingModifiers}} o-teaser-collection__heading--{{this}}{{/headingModifiers}}"{{#if ariaLabel}} aria-label="{{ariaLabel}}"{{/if}}>
 			{{#if url}}
 				<a href="{{url}}" data-trackable="section-title">{{title}}</a>
 			{{else}}
